# suscheck

./: .coverage  .env.example  .gitignore  README.md  audit_report.html  audit_report_v2.html  calibrated_report.html  evil-ci.yml  pyproject.toml  requirements.txt  setup.sh  test_shadow.py
audit/: 18_STEP_AUDIT.md
dashboards/: README.md  app.js  index.html  serve_dashboard.py  styles.css
docs/: 00_Quickstart_User_Guide.md  01_Overview.md  02_Architecture_and_Code_Structure.md  03_CLI_Reference.md  04_Developer_Guide.md  05_Rules_Reference.md  FILES.md  PROFESSOR_GUIDE.md  Quickstart.md  README.md  scan_profiles.md  walkthrough.md
registry/: CORE_SECURITY_MODEL.md  STRESS_TEST_REPORT.md
reports/: suscheck_report_encoded_payload_py_20260412_180722.html  suscheck_report_samples_20260412_184130.html
rules/: bash.toml  javascript.toml  mcp.toml  mitre_mapping.json  php.toml  python.toml
samples/: malicious_shell.py
scratch/: extract_conv.py
scripts/: install_kics.sh  setup_tools.sh  test_keys.py
shredder_out/: payload_no_ext  secrets_leak.txt
tests/: debug_tests.py  test_analysis_service.py  test_cli_commands.py  test_deterministic_fixtures.py  test_diagnostics.py  test_fingerprint_service.py  test_mcp_scanner.py  test_module_naming_contract.py  test_optional_scanner_registry.py  test_output_demo.py  test_performance_service.py  test_regression_matrix.py  test_report_service.py  test_risk_aggregator.py  test_scan_service.py  test_services.py  test_smoke.py  test_summary_service.py  test_supply_chain_auditor.py  test_suppression_service.py  verify_rigor.py  (+3 more)
(+161 files in other folders)
