[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suscheck"
version = "0.1.0"
description = "Pre-execution security scanning platform. Scan before you trust."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shivam Kumar Singh"}
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "ollama>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
suscheck = "suscheck.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
